--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Table</title>
+	<script src="https://kit.fontawesome.com/e4e6fa6159.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<h2>Muinteoir__________-__________ Class timetable</h2>
@@ -17,6 +18,8 @@
 				<th colspan="1">Thursday</th>
 				<th colspan="1">Friday</th>
 			</tr>
+		</thead>
+		<tbody>
 	        <tr>
 				<td>8:00 to 9:00 </td>
 			    <td>English</td>
@@ -114,8 +117,6 @@
 			</tr>
 
 		</tbody>
-				
-		</thead>
 	</table>
 </body>
 </html
